--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -21,6 +21,7 @@ a {
 
 .menu h1 {
     font-family: 'Shrikhand', cursive;
+    font-size: 1.7rem;
 }
 
 .menu h2::after {
@@ -30,5 +31,3 @@ a {
     height: 5px;
     background: $tertiary-color;
 }
-
-// majuscule...
