--- a/src/components/_loading-spinner.scss
+++ b/src/components/_loading-spinner.scss
@@ -1,5 +1,3 @@
-/*
-
 .loading-screen {
     position: fixed;
     display: flex;
@@ -52,8 +50,6 @@
     }
     100% {
         opacity: 0;
-        z-index: 0;
+        z-index: -1;
     }
 }
-
-*/
